# RustIDE

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  REQUESTS.md
crates/rustide-app/: Cargo.toml
crates/rustide-app/src/: config.rs  editor_view.rs  main.rs  project.rs  theme.rs
crates/rustide-editor/: Cargo.toml
crates/rustide-editor/src/: document.rs  editor.rs  lib.rs  selection.rs  tests.rs
crates/rustide-project/: Cargo.toml
crates/rustide-project/src/: lib.rs  tree.rs  watcher.rs
crates/rustide-syntax/: Cargo.toml
crates/rustide-syntax/src/: language.rs  lib.rs  syntax.rs
skills/rustide-bootstrap/: SKILL.md
skills/rustide-bootstrap/references/: mvp.md
skills/rustide-bootstrap/scripts/: check_prereqs.ps1
